Adding leaflet API

--- a/style.css
+++ b/style.css
@@ -177,16 +177,16 @@ a:visited {
   text-align: center;
   color: var(--color-dark--2);
 }
-/* 
+
 .twitter-link:link,
 .twitter-link:visited {
   color: var(--color-dark--1);
   transition: all 0.2s;
-} */
+}
 
 .twitter-link:hover,
 .twitter-link:active {
-  color: var(--color-light--2);
+  color: var(--color-dark--2);
 }
 
 /* MAP */
@@ -217,7 +217,4 @@ a:visited {
 }
 .cycling-popup .leaflet-popup-content-wrapper {
   border-left: 5px solid var(--color-brand--1);
-}
-#map {
-  height: 100%;
 }
