--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ a:visited {
 .form {
   background-color: var(--color-dark--2);
   border-radius: 5px;
-  padding: 1.5rem 2.75rem;
+  padding: 1rem 2.75rem;
   margin-bottom: 1.75rem;
 
   display: grid;
@@ -146,13 +146,13 @@ a:visited {
 }
 
 .form__label {
-  flex: 0 0 50%;
+  flex: 0 0 37%;
   font-size: 1.5rem;
   font-weight: 600;
 }
 
 .form__input {
-  width: 100%;
+  width: 120px;
   padding: 0.3rem 1.1rem;
   font-family: inherit;
   font-size: 1.4rem;
